--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,14 +33,14 @@
             <h1>Welcome to Sports Buddy</h1>
             <p2>Please login or register</p2>
             <p> </p>
-            <form action="#" th:action="@{/login}" th:object="${login}" method="post">
+<!--            <form action="#" th:action="@{/login}" th:object="${login}" method="post">-->
+            <form method="post" action="/login" th:object="${login}">
                 <div class="form-group">
-                    <label for="floatingInput"></label>
-                    <input autocomplete="off" type="text" th:field="*{username}" class="form-control" id="floatingInput" placeholder="Username">
-                </div>
-                <div class="form-group">
-                    <label for="floatingPassword"></label>
-                    <input autocomplete="off" type="password" th:field="*{password}" class="form-control" id="floatingPassword" placeholder="Password">
+                    <label for="username"></label>
+                    <input autocomplete="off" name="username" th:field="*{username}"  type="text" class="form-control" id="username" placeholder="Username">
+
+                    <label for="password"></label>
+                    <input autocomplete="off" name="password" th:field="*{password}" type="password" class="form-control" id="password" placeholder="Password">
                 </div>
                 <p> </p>
                 <div>
