--- a/src/main/resources/templates/passrecovery.html
+++ b/src/main/resources/templates/passrecovery.html
@@ -14,8 +14,6 @@
             /*top: 150px;*/
             width: 20rem
         }
-
-
     </style>
 
 </head>
@@ -32,35 +30,40 @@
         </div>
         <div class="col-md-5">
             <p></p>
-            <h1>Welcome to Sports Buddy</h1>
-            <p2>Please login or register</p2>
+            <h1>Password recovery</h1>
+            <p2>Write your email address below and receive back your login credentials</p2>
             <p> </p>
-<!--            <form action="#" th:action="@{/login}" th:object="${login}" method="post">-->
-            <form method="post" action="/login" th:object="${login}">
-                <div class="form-group">
-                    <label for="username"></label>
-                    <input autocomplete="off" name="username" th:field="*{username}"  type="text" class="form-control" id="username" placeholder="Username">
+            <form method="post" action="/send_email" th:object="${emailForm}" th:if="${account.getPosition()} != 2">
+                <div class="form-group col-md-8" >
+<!--                    <input type="hidden" th:field="*{name}" id="name" value="name">-->
 
-                    <label for="password"></label>
-                    <input autocomplete="off" name="password" th:field="*{password}" type="password" class="form-control" id="password" placeholder="Password">
+                    <label for="email" class="col-form-label">Email</label>
+                    <input type="text" autocomplete="off" th:field="*{email}" class="form-control" id="email" th:errorclass="'form-control is-invalid'">
+                    <div class="invalid-feedback" th:if="${#fields.hasErrors('email')}">
+                        <ul>
+                            <li th:each="err : ${#fields.errors('email')}" th:text="${err}"></li>
+                        </ul>
+                    </div>
                 </div>
                 <p> </p>
-                        <input type="submit" class="btn btn-primary" value="Login">
-                        <a href="register_page" class="btn btn-primary">Register</a>
-                <p> </p>
-                        <a href="pass-recovery" class="btn btn-info" >Password Recovery</a>
+                <div>
+                    <input type="submit" class="btn btn-primary" value="Send Mail">
+                </div>
             </form>
+            <p></p>
+            <a type="button" href="/" class="btn btn-secondary" value="Back to login page">Back to login page</a>
+
             <p></p>
             <div th:if="${account.feedback} == true">
 
             <div th:if="${account.getPosition()} == 1">
                 <div class="alert alert-danger" role="alert" >
-                    <p5 th:text="${account.getMessage()}">Error logging in, username or password incorrect.</p5>
+                    <p5 th:text="${account.getMessage()}">Error.</p5>
                 </div>
             </div>
             <div th:if="${account.getPosition()} == 2">
                 <div class="alert alert-primary" role="alert" >
-                    <p5 th:text="${account.getMessage()}">Account successful created!</p5>
+                    <p5 th:text="${account.getMessage()}">Success!</p5>
                 </div>
             </div>
             </div>
