--- a/src/main/resources/templates/updateForm.html
+++ b/src/main/resources/templates/updateForm.html
@@ -28,22 +28,17 @@
 </nav>
 <div class="container my-4">
     <div class="col-md-8">
-            <h3> Register Form </h3>
+            <h3> Update Form </h3>
             <div class="card">
                 <div class="card-body">
                     <div class="col-md-12">
-                        <form action="#" th:action="@{/register}" method="post">
+                        <form action="#" th:action="@{/update}" method="post">
                             <div class="row">
                                 <div class="form-group col-md-8" th:object="${login}">
                                     <label for="username" class="col-form-label">Username</label>
-                                    <input type="text" id="username" autocomplete="off" th:field="*{username}" class="form-control" th:errorclass="'form-control is-invalid'"/>
-                                    <div class="invalid-feedback" th:if="${#fields.hasErrors('username')}">
-                                        <ul>
-                                            <li th:each="err : ${#fields.errors('username')}" th:text="${err}"></li>
-                                        </ul>
-                                    </div>
+                                    <input id="username" class="form-control" type="text" th:placeholder="${login.username}" readonly>
                                 </div>
-                                <div class="form-group col-md-8" th:object="${login}">
+                                <div class="form-group col-md-8" th:object="${updateForm}">
                                     <label for="password" class="col-form-label">Password</label>
                                     <input type="password" autocomplete="off" th:field="*{password}" class="form-control" id="password" th:errorclass="'form-control is-invalid'">
                                     <div class="invalid-feedback" th:if="${#fields.hasErrors('password')}">
@@ -52,7 +47,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="form-group col-md-8" th:object="${user}">
+                                <div class="form-group col-md-8" th:object="${updateForm}">
                                     <label for="name" class="col-form-label">Name</label>
                                     <input type="text" autocomplete="off" th:field="*{name}" class="form-control" id="name" th:errorclass="'form-control is-invalid'">
                                     <div class="invalid-feedback" th:if="${#fields.hasErrors('name')}">
@@ -63,7 +58,7 @@
                                 </div>
                                 <div class="form-group col-md-8" th:object="${user}">
                                     <label for="email" class="col-form-label">Email</label>
-                                    <input type="text" autocomplete="off" th:field="*{email}" class="form-control" id="email" th:errorclass="'form-control is-invalid'">
+                                    <input id="email" class="form-control" type="text" th:placeholder="${user.email}" readonly>
                                     <div class="invalid-feedback" th:if="${#fields.hasErrors('email')}">
                                         <ul>
                                             <li th:each="err : ${#fields.errors('email')}" th:text="${err}"></li>
@@ -115,8 +110,8 @@
 
                                 <div class="col-md-6">
                                     <p></p>
-                                    <input type="submit" href="register" class="btn btn-primary" value="Register"/>
-                                    <a type="button" href="/" class="btn btn-secondary" value="Back to login page">Back to login page</a>
+                                    <input type="submit" href="update" class="btn btn-primary" value="Update"/>
+                                    <a type="button" href="/" class="btn btn-secondary" value="Back to matches list">Back to login page</a>
 
                                 </div>
                             </div>
@@ -126,6 +121,13 @@
                             <div th:if="${account.getPosition()} == 1">
                                 <div class="alert alert-danger" role="alert" >
                                     <p5 th:text="${account.getMessage()}">Error creating account.</p5>
+                                </div>
+                            </div>
+                        </div>
+                        <div th:if="${account.feedback} == true">
+                            <div th:if="${account.getPosition()} == 3">
+                                <div class="alert alert-warning" role="alert" >
+                                    <p5 th:text="${account.getMessage()}">Update.</p5>
                                 </div>
                             </div>
                         </div>
