Implemented completely user_details.html and InspectController

--- a/src/main/resources/templates/updateForm.html
+++ b/src/main/resources/templates/updateForm.html
@@ -99,7 +99,7 @@
                                 <div class="col-md-6">
                                     <p></p>
                                     <input type="submit" href="update" class="btn btn-primary" value="Update"/>
-                                    <a type="button" href="/" class="btn btn-secondary" value="Back to matches list">Back to login page</a>
+                                    <a type="button" href="/" class="btn btn-secondary" value="Back to matches list">Go back</a>
 
                                 </div>
                             </div>
