--- a/src/main/resources/templates/inspect/user_details.html
+++ b/src/main/resources/templates/inspect/user_details.html
@@ -48,56 +48,32 @@
 <div class="container my-2">
     <div class="card">
         <div class="card-body">
-            <div th:switch="${matches}" class="container my-5">
-                <p class="my-5">
-                    <a href="/matches/create_match_page" class="btn btn-primary"><i
-                            class="fas fa-user-plus ml-2"> Create a new match</i></a>
-                </p>
                 <div class="col-md-12">
-                    <h2 th:case="null">No matches!</h2>
-                    <div th:case="*">
-                        <table class="table table-striped table-responsive-md">
-                            <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>Sport</th>
-                                <th>Participants</th>
-                                <th>Date</th>
-                                <th>Hour</th>
-                                <th>Location</th>
-                                <th>Owner</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr th:each="match : ${matches}">
-                                <td th:text="${match.name}"></td>
-                                <td th:text="${match.sportName}"></td>
-                                <td th:text="${match.numberOfParticipants}"></td>
-                                <td th:text="${match.date}"></td>
-                                <td th:text="${match.hour}"></td>
-                                <td th:text="${match.location}"></td>
-                                <td th:text="${match.ownerName}"></td>
-                                <td style="width: 5.00%"> <!-- Participate: NOT for users that have that match -->
-                                    <span th:if="${mainUser.getParticipatingMatches().contains(match)}"><button class="btn btn-info" disabled>Participate</button></span>
-                                    <span th:unless="${mainUser.getParticipatingMatches().contains(match)}"><a th:href="@{/matches/match_participate/{id}(id=${match.getId()})}" class="btn btn-info">Participate</a></span>
-                                </td>
-                                <td style="width: 5.00%"> <!-- Leave match: ONLY for users that have that match AND are not owners-->
-                                    <span th:if="${(mainUser.getParticipatingMatches().contains(match)) && ((match.ownerID) != (mainUser.id))}">
-                                        <a th:href="@{/matches/match_leave/{id}(id=${match.getId()})}" class="btn btn-warning">Leave</a></span>
-                                    <span th:unless="${(mainUser.getParticipatingMatches().contains(match)) && ((match.ownerID) != (mainUser.id))}">
-                                        <button class="btn btn-warning" disabled>Leave</button></span>
-                                </td>
-                                <td style="width: 5.00%"> <!-- Delete match: ONLY for users that OWN that match-->
-                                    <span th:if="${match.ownerID} == ${mainUser.id}" ><a th:method="post" th:href="@{/matches/match_delete/{id}(id=${match.getId()})}" class="btn btn-danger">Delete</a></span>
-                                    <span th:unless="${match.ownerID} == ${mainUser.id}"><button class="btn btn-danger" disabled>Delete</button></span>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
+                    <h1>User Details</h1>
+                    <div class="row"></div>
+                    <div class="col-md-3">
+                    </div>
+                    <div class="col-md-6" th:object="${userInspected}">
+                        <p style="font-weight: bold">Name: </p>
+                        <p th:text="${userInspected.name}">Name</p>
+                        <p style="font-weight: bold">Email: </p>
+                        <p th:text="${userInspected.email}">Email</p>
+                        <p style="font-weight: bold">Favourite Sports: </p>
+                            <ul th:each="sport : ${userInspected.favouriteSports}">
+                                <li th:text="${sport}"></li>
+                            </ul>
+                        <p style="font-weight: bold">Participating Matches: </p>
+                        <ul th:each="match : ${userInspected.participatingMatches}">
+                            <li th:text="${match.name}"></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3" >
+                        <a type="button" href="/" class="btn btn-secondary" value="Back to matches list">Go back</a>
+
                     </div>
                 </div>
-            </div>
-        </div>
+                </div>
+    </div>
     </div>
 </div>
 </body>
