--- a/src/main/resources/templates/matches/matchesList.html
+++ b/src/main/resources/templates/matches/matchesList.html
@@ -76,7 +76,7 @@
                                 <td th:text="${match.date}"></td>
                                 <td th:text="${match.hour}"></td>
                                 <td th:text="${match.location}"></td>
-                                <td th:text="${match.ownerName}"></td>
+                                <td> <a th:href="@{/inspect/{id}/user/(id=${match.getOwnerID()})}" th:text="${match.ownerName}"></a></td>
                                 <td style="width: 5.00%"> <!-- Participate: NOT for users that have that match -->
                                     <span th:if="${mainUser.getParticipatingMatches().contains(match)}"><button class="btn btn-info" disabled>Participate</button></span>
                                     <span th:unless="${mainUser.getParticipatingMatches().contains(match)}"><a th:href="@{/matches/match_participate/{id}(id=${match.getId()})}" class="btn btn-info">Participate</a></span>
