--- a/src/main/resources/templates/matches/matchesList.html
+++ b/src/main/resources/templates/matches/matchesList.html
@@ -48,6 +48,11 @@
 <div class="container my-2">
     <div class="card">
         <div class="card-body">
+            <div th:if="${matchInteract.feedback} == true">
+                <div class="alert alert-info" role="alert" >
+                    <p5 th:text="${matchInteract.getMessage()}">matchInteract Message.</p5>
+                </div>
+            </div>
             <div th:switch="${matches}" class="container my-5">
                 <p class="my-5">
                     <a href="/matches/create_match_page" class="btn btn-primary"><i
@@ -80,20 +85,6 @@
                                 <td><a th:href="@{/inspect/{id}/match/(id=${match.getId()})}" class="btn btn-info" >
                                     Details</a></td>
 
-<!--                                <td style="width: 5.00%"> &lt;!&ndash; Participate: NOT for users that have that match &ndash;&gt;-->
-<!--                                    <span th:if="${mainUser.getParticipatingMatches().contains(match)}"><button class="btn btn-info" disabled>Participate</button></span>-->
-<!--                                    <span th:unless="${mainUser.getParticipatingMatches().contains(match)}"><a th:href="@{/matches/match_participate/{id}(id=${match.getId()})}" class="btn btn-info">Participate</a></span>-->
-<!--                                </td>-->
-<!--                                <td style="width: 5.00%"> &lt;!&ndash; Leave match: ONLY for users that have that match AND are not owners&ndash;&gt;-->
-<!--                                    <span th:if="${(mainUser.getParticipatingMatches().contains(match)) && ((match.ownerID) != (mainUser.id))}">-->
-<!--                                        <a th:href="@{/matches/match_leave/{id}(id=${match.getId()})}" class="btn btn-warning">Leave</a></span>-->
-<!--                                    <span th:unless="${(mainUser.getParticipatingMatches().contains(match)) && ((match.ownerID) != (mainUser.id))}">-->
-<!--                                        <button class="btn btn-warning" disabled>Leave</button></span>-->
-<!--                                </td>-->
-<!--                                <td style="width: 5.00%"> &lt;!&ndash; Delete match: ONLY for users that OWN that match&ndash;&gt;-->
-<!--                                    <span th:if="${match.ownerID} == ${mainUser.id}" ><a th:method="post" th:href="@{/matches/match_delete/{id}(id=${match.getId()})}" class="btn btn-danger">Delete</a></span>-->
-<!--                                    <span th:unless="${match.ownerID} == ${mainUser.id}"><button class="btn btn-danger" disabled>Delete</button></span>-->
-<!--                                </td>-->
                             </tr>
                             </tbody>
                         </table>
