Fixed Buttons distance on create_match_page. Closes #31.

--- a/src/main/resources/templates/matches/match_creation.html
+++ b/src/main/resources/templates/matches/match_creation.html
@@ -114,6 +114,7 @@
                             <div class="col-md-6">
                                 <p></p>
                                 <input type="submit" href="matches/create_match" class="btn btn-primary" value="Create match">
+                                <p></p>
                                 <a type="button" href="matches/matches" th:href="@{/matches/matches}" class="btn btn-secondary">Back to matches</a>
                         </div>
                     </form>
@@ -133,5 +134,7 @@
     <div class="col-md-4">
         <img id="img2" src="logo2.jpg" class="d-inline-block align-top" alt="" th:src="@{/images/logo2.jpg}">
     </div>
+    </div>
+</div>
 </body>
 </html>
