--- a/src/main/resources/templates/inspect/match_details.html
+++ b/src/main/resources/templates/inspect/match_details.html
@@ -8,21 +8,8 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <style>
-        img {
-            position: relative;
-            width: 4rem;
-            height: 4rem;
-        }
-        #log {
-            position: relative;
-            right: 50px;
-        }
-        #username {
-            font-style: italic;
-        }
-
-    </style>
+    <!--    CSS ref-->
+    <link rel="stylesheet" type="text/css" href="/css/styles.css" />
 
 </head>
 <body>
@@ -31,22 +18,9 @@
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
 <!-- Image and text -->
-<nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="#">
-        <img src="/navbar.PNG" class="d-inline-block align-top" alt="" th:src="@{/images/navbar.PNG}">
-        Sports Buddy
-    </a>
-    <div id="log">
-        <p>Logged in as: <a id="username" th:text="${mainUser.getName()}">Name</a></p>
 
-        <li class="nav">
-            <a class="nav-link" href="/updateAccount">Change account details</a>
-        </li>
-        <li class="nav">
-            <a class="nav-link" href="/logout">Log out</a>
-        </li>
-    </div>
-</nav>
+<div id="navbar"></div>
+
 <div class="container my-4">
     <div class="row">
         <div class="col-md-2">
@@ -110,5 +84,11 @@
     </div>
 </div>
 </div>
+<script th:inline="javascript">
+        /*<![CDATA[*/
+            const mainUser = /*[[${mainUser.getName()}]]*/ 'mainUser';
+        /*]]>*/
+    </script>
+<script src="/js/app.js"> </script>
 </body>
 </html>
