--- a/src/main/resources/templates/updateForm.html
+++ b/src/main/resources/templates/updateForm.html
@@ -7,38 +7,17 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <style>
-        img {
-            position: relative;
-            width: 4rem;
-            height: 4rem;
-        }
-        #log {
-            position: relative;
-            right: 50px;
-        }
-        #user {
-            font-style: italic;
-        }
-    </style>
+    <!--    CSS ref-->
+    <link rel="stylesheet" type="text/css" href="/css/styles.css" />
 
 </head>
 <body>
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 <!-- Image and text -->
-<nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="#">
-        <img src="../static/images/navbar.PNG" class="d-inline-block align-top" alt="" th:src="@{/images/navbar.PNG}">
-        Sports Buddy
-    </a>
-    <div id="log">
-        <p>Logged in as: <a id="user" th:text="${user.getName()}">Name</a></p>
-        <li class="nav">
-            <a class="nav-link" href="/logout" >Log out</a>
-        </li>
-    </div>
-</nav>
+
+<div id="navbar"></div>
+
 <div class="container my-4">
     <div class="col-md-8">
             <h3> Update Form </h3>
@@ -128,9 +107,13 @@
                     </div>
                 </div>
             </div>
-
     </div>
-
 </div>
+<script th:inline="javascript">
+        /*<![CDATA[*/
+            const mainUser = /*[[${user.getName()}]]*/ 'mainUser';
+        /*]]>*/
+    </script>
+<script src="/js/app.js"> </script>
 </body>
 </html>
